syntax = "proto3";

package kanban.model;

import "google/protobuf/empty.proto";

service ProjectService {
  // Called from KanbanService.
  rpc CreateProject(CreateProjectRequest) returns (Project) {}
  rpc GetProject(GetProjectRequest) returns (Project) {}
  rpc ListProjects(google.protobuf.Empty) returns (ListProjectsResponse) {}
  rpc UpdateProject(UpdateProjectRequest) returns (Project) {}
  rpc DeleteProject(DeleteProjectRequest) returns (google.protobuf.Empty) {}
}

message Project {
  string id = 1;
  string title = 2;
}

message CreateProjectRequest {
  string title = 1;
}

message GetProjectRequest {
  string id = 1;
}

message ListProjectsResponse {
  repeated Project projects = 1;
}

message UpdateProjectRequest {
  string id = 1;
  string title = 2;
}

message DeleteProjectRequest {
  string id = 1;
}
